--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,50 @@
 .side__bar {
+  position: relative;
   height: 100vh;
   top: 0;
   left: 0;
+  transition: 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.navbar__close__btn {
+  display: none;
+}
+.navbar__open__btn {
+  display: none;
+}
+
+@media only screen and (max-width: 768px) {
+  .sibebar__main {
+    position: absolute !important;
+    z-index: 10;
+    background-color: white;
+    width: 50% !important;
+    transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+  .sidebar__main__close {
+    display: none !important;
+    transition: 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+  .navbar__open__btn {
+    display: none;
+  }
+  .navbar__close__btn {
+    position: absolute;
+    right: 20px;
+    top: 25px;
+    font-weight: bold;
+    align-self: flex-end;
+    font-size: 1.5rem;
+    cursor: pointer;
+    display: inline-block;
+  }
+  .navbar__open__btn {
+    position: absolute;
+    left: 25px;
+    top: 25px;
+    font-weight: bold;
+    font-size: 2rem;
+    cursor: pointer;
+    z-index: 10;
+    display: inline-block;
+  }
 }
